--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <p class="mb-8 w-full m-auto">
         <strong>About</strong>
       </br>
-        The Launchlead is a dog lead that can throw a tennis ball up to 50 meters, reduce should stress and let you play more with your furry friend.
+        The Launchlead is a dog lead that can throw a tennis ball up to 50 meters, reduce shoulder stress and let you play more with your furry friend.
       </p>
 
     <a href="#test" class="mx-auto lg:mx-0 hover:underline text-white font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient" href="#test">
