--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
   </head>
 
-  <body class="leading-normal tracking-normal text-white h-14 bg-gradient-to-r to-cyan-500 from-launchlead-blue" style="font-family: 'Source Sans Pro', sans-serif;">
+  <body class="leading-normal tracking-normal text-white text-opacity-80 h-14 bg-gradient-to-r to-launchlead-gradient-to from-launchlead-gradient-from" style="font-family: 'Source Sans Pro', sans-serif;">
     <nav id="header" class="fixed w-full z-30 top-0">
   <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 p-3" style="max-width: 87rem;">
     <div class="pl-4 flex items-center">
@@ -79,7 +79,7 @@
           <li class="text-right">
             <a
               href="/"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               underline hover:scale-110">
               Home
             </a>
@@ -88,7 +88,7 @@
           <li class="text-right">
             <a
               href="/about/"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               inline-block py-2 px-4 font-bold cursor-default">
               About
             </a>
@@ -97,7 +97,7 @@
           <li class="text-right">
             <a
               href="/unleash/"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               underline hover:scale-110">
               How to use it
             </a>
@@ -105,7 +105,7 @@
         
       </ul>
 
-      <button id="navAction" class="float-right mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+      <button id="navAction" class="gradient float-right mx-auto lg:mx-0 hover:underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out text-white">
         Buy now
       </button>
     </div>
@@ -360,7 +360,6 @@
           navlogoWhite.classList.add("block");
           navlogoBlue.classList.add("hidden");
           header.classList.remove("bg-white");
-          navaction.classList.remove("gradient");
           navaction.classList.add("bg-white");
           navaction.classList.remove("text-white");
           navaction.classList.add("text-gray-600");
