--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   </head>
 
-  <body class="leading-normal tracking-normal text-white h-14 bg-gradient-to-r to-cyan-500 from-launchlead-blue" style="font-family: 'Source Sans Pro', sans-serif;">
+  <body class="leading-normal tracking-normal text-white text-opacity-80 h-14 bg-gradient-to-r to-launchlead-gradient-to from-launchlead-gradient-from" style="font-family: 'Source Sans Pro', sans-serif;">
     <nav id="header" class="fixed w-full z-30 top-0">
   <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 p-3" style="max-width: 87rem;">
     <div class="pl-4 flex items-center">
@@ -79,7 +79,7 @@
           <li class="text-right">
             <a
               href="/"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               inline-block py-2 px-4 font-bold cursor-default">
               Home
             </a>
@@ -88,7 +88,7 @@
           <li class="text-right">
             <a
               href="/about/"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               underline hover:scale-110">
               About
             </a>
@@ -97,7 +97,7 @@
           <li class="text-right">
             <a
               href="/unleash/"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               underline hover:scale-110">
               How to use it
             </a>
@@ -105,7 +105,7 @@
         
       </ul>
 
-      <button id="navAction" class="float-right mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+      <button id="navAction" class="gradient float-right mx-auto lg:mx-0 hover:underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out text-white">
         Buy now
       </button>
     </div>
@@ -121,8 +121,8 @@
     <!--Left Col-->
     <div class="lg:px-8 lg:pl-14 flex flex-col w-full lg:w-2/4 justify-center items-start text-center lg:text-left">
       
-      <h1 class="w-full my-4 text-4xl font-bold leading-tight text-center lg:text-left">
-        A dog lead &amp; ball thrower in one!
+      <h1 class="w-full my-4 text-4xl font-bold leading-tight text-center lg:text-left text-white text-opacity-100">
+        A Dog Lead &amp; Ball Thrower In One!
       </h1>
 
       <ul class="w-full leading-normal text-lg mb-8 text-center lg:text-left lg:list-disc lg:pr-8 lg:pl-14">
@@ -139,7 +139,7 @@
         The Launchlead is a dog lead that can throw a tennis ball up to 50 meters, reduce shoulder stress and let you play more with your furry friend.
       </p>
 
-    <a href="#test" class="mx-auto lg:mx-0 hover:underline text-white font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient" href="#test">
+    <a href="#test" class="mx-auto lg:mx-0 hover:underline text-white text-opacity-90 font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient" href="#test">
         See it in action
       </a>
   </div>
@@ -183,8 +183,6 @@
         <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
           See it in action
         </h3>
-        <h2 id="test" class="scroll-mt-20">Syntax</h2>
-
         <p class="text-gray-600">
           Our patent pending design allows for the ball to be thrown up to 50 meters. It also reduces stress on the shoulders when throwing.
         </p>
@@ -207,7 +205,6 @@
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3 text-center lg:text-left">
               Carry less, play more
           </h3>
-          <p>About this item<p>
           <ul class=" text-gray-800 mb-8 md:ml-8 text-center md:text-left lg:list-disc">
             <li class="mb-3">
               <strong>Throw away your thrower </strong> - Using a LaunchLead means no need to take an additional ball thrower, recycle it and use a lead that can throw as well. Thats one less thing to carry.</li>
@@ -376,7 +373,6 @@
           navlogoWhite.classList.add("block");
           navlogoBlue.classList.add("hidden");
           header.classList.remove("bg-white");
-          navaction.classList.remove("gradient");
           navaction.classList.add("bg-white");
           navaction.classList.remove("text-white");
           navaction.classList.add("text-gray-600");
