--- a/unleash/index.html
+++ b/unleash/index.html
@@ -22,7 +22,7 @@
     <nav id="header" class="fixed w-full z-30 top-0">
   <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 p-3" style="max-width: 87rem;">
     <div class="pl-4 flex items-center">
-      <a href="/" class="toggleColour no-underline hover:no-underline">
+      <a href="https://www.amazon.co.uk/dp/B0B5S2DHV3?th=1" class="toggleColour no-underline hover:no-underline">
         <svg id="navLogoWhite" class="w-52 lg:w-64 block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="isolation:isolate" viewBox="69.928 102.211 487 96.935" >
           <defs>
             <clipPath id="_clipPath_Cz954Unbpz1hKNGjlgiUdgTINBv7ahFS"><rect x="69.928" y="102.211" width="487" height="96.935"/></clipPath>
@@ -105,9 +105,9 @@
         
       </ul>
 
-      <button id="navAction" class="gradient float-right mx-auto lg:mx-0 hover:underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out text-white">
+      <a id="navAction" href="https://www.amazon.co.uk/dp/B0B5S2DHV3?th=1avAction" class="gradient float-right mx-auto lg:mx-0 hover:underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out text-white">
         Buy now
-      </button>
+      </a>
     </div>
   </div>
 
@@ -290,7 +290,7 @@
       How to use it
     </a>
 
-    <a class="mx-auto lg:mx-0  ml-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+    <a href="https://www.amazon.co.uk/dp/B0B5S2DHV3?th=1" class="mx-auto lg:mx-0  ml-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
       Buy now
     </a>
   </section>
@@ -321,7 +321,7 @@
             <a href="/unleash" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Throwing instructions</a>
           </li>
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Buy now</a>
+            <a href="https://www.amazon.co.uk/dp/B0B5S2DHV3?th=1" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Buy now</a>
           </li>
         </ul>
       </div>
@@ -329,10 +329,10 @@
       <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Facebook</a>
+            <a href="https://www.facebook.com/LaunchLeadUK" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Facebook</a>
           </li>
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Youtube</a>
+            <a href="https://www.youtube.com/channel/UCLGxMrBwrmKL55j5jNtnq3A" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Youtube</a>
           </li>
         </ul>
       </div>
@@ -340,11 +340,13 @@
       <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Instgram</a>
+            <a href="https://www.instagram.com/launchlead/" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Instgram</a>
           </li>
-          
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Twitter</a>
+            <a href="https://www.pinterest.co.uk/05q2zt2kqno7zn3o5iypsoojp31n2a/_created/" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Pintrest</a>
+          </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="https://twitter.com/launchlead_uk" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Twitter</a>
           </li>
         </ul>
       </div>
